@@ -1,6 +1,0 @@
-Python-RSA is a pure-Python RSA implementation. It supports encryption
-and decryption, signing and verifying signatures, and key generation
-according to PKCS#1 version 1.5. It can be used as a Python library
-as well as on the commandline.
-
-This package contains the last version supported by Python 2.x.
