@@ -1,61 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2020/09/01 04:06:11 wiz Exp $
-bin/pyrsa-decrypt-${PYVERSSUFFIX}
-bin/pyrsa-encrypt-${PYVERSSUFFIX}
-bin/pyrsa-keygen-${PYVERSSUFFIX}
-bin/pyrsa-priv2pub-${PYVERSSUFFIX}
-bin/pyrsa-sign-${PYVERSSUFFIX}
-bin/pyrsa-verify-${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/rsa/__init__.py
-${PYSITELIB}/rsa/__init__.pyc
-${PYSITELIB}/rsa/__init__.pyo
-${PYSITELIB}/rsa/_compat.py
-${PYSITELIB}/rsa/_compat.pyc
-${PYSITELIB}/rsa/_compat.pyo
-${PYSITELIB}/rsa/asn1.py
-${PYSITELIB}/rsa/asn1.pyc
-${PYSITELIB}/rsa/asn1.pyo
-${PYSITELIB}/rsa/cli.py
-${PYSITELIB}/rsa/cli.pyc
-${PYSITELIB}/rsa/cli.pyo
-${PYSITELIB}/rsa/common.py
-${PYSITELIB}/rsa/common.pyc
-${PYSITELIB}/rsa/common.pyo
-${PYSITELIB}/rsa/core.py
-${PYSITELIB}/rsa/core.pyc
-${PYSITELIB}/rsa/core.pyo
-${PYSITELIB}/rsa/key.py
-${PYSITELIB}/rsa/key.pyc
-${PYSITELIB}/rsa/key.pyo
-${PYSITELIB}/rsa/machine_size.py
-${PYSITELIB}/rsa/machine_size.pyc
-${PYSITELIB}/rsa/machine_size.pyo
-${PYSITELIB}/rsa/parallel.py
-${PYSITELIB}/rsa/parallel.pyc
-${PYSITELIB}/rsa/parallel.pyo
-${PYSITELIB}/rsa/pem.py
-${PYSITELIB}/rsa/pem.pyc
-${PYSITELIB}/rsa/pem.pyo
-${PYSITELIB}/rsa/pkcs1.py
-${PYSITELIB}/rsa/pkcs1.pyc
-${PYSITELIB}/rsa/pkcs1.pyo
-${PYSITELIB}/rsa/pkcs1_v2.py
-${PYSITELIB}/rsa/pkcs1_v2.pyc
-${PYSITELIB}/rsa/pkcs1_v2.pyo
-${PYSITELIB}/rsa/prime.py
-${PYSITELIB}/rsa/prime.pyc
-${PYSITELIB}/rsa/prime.pyo
-${PYSITELIB}/rsa/randnum.py
-${PYSITELIB}/rsa/randnum.pyc
-${PYSITELIB}/rsa/randnum.pyo
-${PYSITELIB}/rsa/transform.py
-${PYSITELIB}/rsa/transform.pyc
-${PYSITELIB}/rsa/transform.pyo
-${PYSITELIB}/rsa/util.py
-${PYSITELIB}/rsa/util.pyc
-${PYSITELIB}/rsa/util.pyo
