@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2022/01/14 11:49:44 wiz Exp $
-
-BLAKE2s (rsa-4.0.tar.gz) = d1a1aa66639dc5e0b65d37c877c4eb93dbe649157032fcd436f6b2fb20a3cfef
-SHA512 (rsa-4.0.tar.gz) = e11106741cc4275246c986d39b3f028b5a4df6fbffdd08a78072ac3d3a9a7ade7a39789c504a2705f54d858a9bdbf03981251f32f9c45baba71e4a986e14b24e
-Size (rsa-4.0.tar.gz) = 37385 bytes
