@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.2716 2023/05/02 17:25:32 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.2717 2023/05/02 17:26:03 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -3811,3 +3811,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Removed devel/py-mccabe06 [wiz 2023-05-02]
 	Removed converters/py-chardet4 [wiz 2023-05-02]
 	Removed textproc/py-pygments25 [wiz 2023-05-02]
+	Removed security/py-rsa40 [wiz 2023-05-02]
